[package]
name = "version_switcher"
version = "1.0.0"
edition = "2024"

# Abhängigkeiten für das eigentliche Programm (main.rs)
[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser"] }
notify-rust = "4"
rfd = "0.16.0"
serde_json = "1.0"

# WICHTIG: Abhängigkeiten für das Build-Skript (build.rs) gehören hierhin!
[build-dependencies]
winres = "0.1"
